--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: rgb(105, 65, 62);
-  background: url("brushed.png");
+  background: url("768-index.png");
 }
 
 * {
