--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ h3 {
 
 .sidebar {
   padding: 0px 30px 30px 30px;
-  background: #fff;
+  background: rgb(253, 163, 163);
   border: 1px solid #ddd;
   margin-bottom: 30px;
 }
