--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 18px;
   line-height: 34px;
   color: rgb(105, 65, 62);
-  background: url("768-index.png");
+  background-image: url("768-index.png");
 }
 
 * {
@@ -74,11 +74,21 @@ h3 {
 }
 
 /* remove border from the about link */
+
 #no-border-about {
   border-left: 0 none !important;
 }
 
 /* footer */
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
 
 .footer-section {
   padding-top: 20px;
@@ -150,6 +160,7 @@ h3,
 /* portfolio page */
 
 /* override bootstrap defaults for portfolio page */
+
 .caption {
   width:100%;
   bottom: 10px;
